// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlockPortWidget input port renders correctly 1`] = `
<div
  data-radium={true}
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": 20,
    }
  }
>
  <div
    className="port malcolm-port "
    data-name="val1"
    data-nodeid="123456"
    data-radium={true}
    key=".0"
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    role="presentation"
    style={
      Object {
        "background": undefined,
        "borderRadius": 6,
        "height": 12,
        "marginRight": 3,
        "width": 12,
      }
    }
  />
  <WithStyles(Typography)
    key=".1"
    style={
      Object {
        "fontSize": 12,
      }
    }
  >
    val 1
  </WithStyles(Typography)>
</div>
`;

exports[`BlockPortWidget output port renders correctly 1`] = `
<div
  data-radium={true}
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": 20,
    }
  }
>
  <WithStyles(Typography)
    key=".0"
    style={
      Object {
        "fontSize": 12,
      }
    }
  >
    val 1
  </WithStyles(Typography)>
  <div
    className="port malcolm-port "
    data-name="val1"
    data-nodeid="123456"
    data-radium={true}
    key=".1"
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    role="presentation"
    style={
      Object {
        "background": undefined,
        "borderRadius": 6,
        "height": 12,
        "marginLeft": 3,
        "width": 12,
      }
    }
  />
</div>
`;
